# fox-lang

./: Cargo.toml  README.md
examples/: errors.fox  hello.fox
src/: errors.rs  expr.rs  lexer.rs  lib.rs  main.rs  scanner.rs
